--- a/TeamBuilder/appsettings.json
+++ b/TeamBuilder/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TeamBuilder-91A1DA42-7A35-4293-A4EC-874DD6AC5D43;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=LAPTOP-8CP7A9GQ\\SQLEXPRESS;Database=TeamBuilder;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
